name:           directory
version:        1.2.2.0
-- NOTE: Don't forget to update ./changelog.md
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports:    https://github.com/haskell/directory/issues
synopsis:       Platform-agnostic library for filesystem operations
description:
  This library provides a basic set of operations for manipulating files and
  directories in a portable way.
category:       System
build-type:     Configure
cabal-version:  >= 1.10
tested-with:    GHC>=7.4.1

extra-tmp-files:
    autom4te.cache
    config.log
    config.status
    include/HsDirectoryConfig.h

extra-source-files:
    changelog.md
    README.md
    config.guess
    config.sub
    configure
    configure.ac
    directory.buildinfo
    include/HsDirectoryConfig.h.in
    install-sh
    tests/*.hs
    tests/*.stderr
    tests/*.stdout
    tests/Makefile
    tests/all.T
    tests/copyFile001dir/source
    tests/copyFile002dir/source
    tests/createDirectory001.stdout-mingw32
    tests/createDirectoryIfMissing001.stdout-mingw32
    tests/getDirContents002.stderr-mingw32
    tests/getPermissions001.stdout-alpha-dec-osf3
    tests/getPermissions001.stdout-i386-unknown-freebsd
    tests/getPermissions001.stdout-i386-unknown-openbsd
    tests/getPermissions001.stdout-mingw
    tests/getPermissions001.stdout-x86_64-unknown-openbsd
    tools/ghc.patch
    tools/run-tests

source-repository head
    type:     git
    location: https://github.com/haskell/directory

Library
    default-language: Haskell2010
    other-extensions:
        CPP
        NondecreasingIndentation
        Trustworthy

    exposed-modules:
        System.Directory

    c-sources:
        cbits/directory.c
    include-dirs: include
    includes:
        HsDirectory.h
    install-includes:
        HsDirectory.h

    build-depends:
        base     >= 4.5 && < 4.9,
        time     >= 1.4 && < 1.6,
        filepath >= 1.3 && < 1.5
    if os(windows)
        build-depends: Win32 >= 2.2.2 && < 2.4
    else
        build-depends: unix >= 2.5.1 && < 2.8

    ghc-options: -Wall

test-suite test
    default-language: Haskell2010
    other-extensions: CPP ForeignFunctionInterface
    ghc-options:      -Wall
    hs-source-dirs:   tools
    main-is:          dispatch-tests.hs
    type:             exitcode-stdio-1.0
    build-depends:    base, directory
